# personal-dev

./: remote_ops.py
C++Learning/dependency-inversion-principle/application/: CMakeLists.txt  CMakeLists.txt.bak
goals/: 2021Goals.docx
handson-ml2/: .index.ipynb.swp  Housing.ipynb  (+2 more)
interviews/sarcos/: CMakeLists.txt
interviews/shield/: CMakeLists.txt  README.md  local_build.bat  path-noobstacles-fix.csv  path-noobstacles.csv  path-obstacles.csv  path.csv  research.md  run-save-bb8.py
interviews/shield/oldbb8/: oldbb8.vtuneproj
interviews/shield/oldbb8/r000ps/: r000ps.vtune
interviews/shield/oldbb8/r000ps/config/: analysis_type.cfg  context_values.cfg  log.cfg  runsa.options
interviews/shield/oldbb8/r000ps/config/query_library/: gen_metrics.cfg
interviews/shield/oldbb8/r000ps/data.0/: emon.0.emon  emon.0.emon_events  emon.0.emon_version  gen_metrics0_0_2_0_0.0.cfg  gen_metrics0_0_2_0_0.0.vtss  sep.events  systemcollector-11980-PKCKBRIGGS2.win.ansys.com.sc
interviews/shield/oldbb8/r000ps/sqlite-db/: dicer.db
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_bandwidth_base_grouper/: container.metadata
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_bandwidth_base_grouper/grouper/: 0
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_bandwidth_global_grouper/grouper/: 0
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_dd_gpu_node/grouper/: 0
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_dd_package/grouper/: 0
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_dd_thread/grouper/: 0
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_global_data_grouper/grouper/: 0
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/grouper/: 0
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_gpu_conditional_metrics/grouper/: 0
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_gpu_packet_stage_grouper/: container.metadata
interviews/shield/oldbb8/r000ps/sqlite-db/_cache_grouper_data4_gpu_packet_stage_grouper/grouper/: 0
interviews/shield/oldbb8/r000ps/sqlite-db/pmu_data/: container.metadata
interviews/shield/oldbb8/r000ps/sqlite-db/pmu_data/end_tsc/: 0  mapping.xml
interviews/shield/oldbb8/r000ps/sqlite-db/timelinedb/: directory.xml
interviews/shield/oldbb8/r000ps/sqlite-db/timelinedb/dbint-0492/aggregated/0/: 0  mapping.xml
interviews/shield/oldbb8/r000ps/sqlite-db/timelinedb/dbint-16828/aggregated/0/: 0  mapping.xml
interviews/shield/oldbb8/r000ps/sqlite-db/timelinedb/dbint-2996/aggregated/0/: 0  mapping.xml
interviews/shield/oldbb8/r000ps/sqlite-db/timelinedb/dbint-9962/aggregated/0/: 0  mapping.xml
interviews/shield/oldbb8/r001hs/: r001hs.vtune
interviews/shield/oldbb8/r001hs/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options  state.cfg
interviews/shield/oldbb8/r001hs/data.0/: systemcollector-18196-PKCKBRIGGS2.win.ansys.com.sc
interviews/shield/oldbb8/r001hs/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
interviews/shield/oldbb8/r001hs/sqlite-db/_cache_grouper_data4_dd_thread/grouper/: 0
interviews/shield/oldbb8/r001hs/sqlite-db/_cache_grouper_data4_global_data_grouper/grouper/: 0
interviews/shield/oldbb8/r001hs/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/grouper/: 0
interviews/shield/oldbb8/r001hs/sqlite-db/pmu_data/: container.metadata
interviews/shield/oldbb8/r001hs/sqlite-db/pmu_data/end_tsc/: 0  mapping.xml
interviews/shield/oldbb8/r001hs/sqlite-db/timelinedb/: directory.xml
interviews/shield/oldbb8/r002hs/: r002hs.vtune
interviews/shield/oldbb8/r002hs/config/: context_values.cfg  log.cfg  runsa.options  state.cfg
interviews/shield/oldbb8/r002hs/data.0/: systemcollector-18524-PKCKBRIGGS2.win.ansys.com.sc
interviews/shield/oldbb8/r002hs/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
interviews/shield/oldbb8/r002hs/sqlite-db/_cache_grouper_data4_dd_thread/grouper/: 0
interviews/shield/oldbb8/r002hs/sqlite-db/_cache_grouper_data4_global_data_grouper/grouper/: 0
interviews/shield/oldbb8/r002hs/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/grouper/: 0
interviews/shield/oldbb8/r002hs/sqlite-db/pmu_data/: container.metadata
interviews/shield/oldbb8/r002hs/sqlite-db/pmu_data/end_tsc/: 0  mapping.xml
interviews/shield/oldbb8/r002hs/sqlite-db/timelinedb/: directory.xml
interviews/shield/output/: config-space.txt  solution-path.txt
interviews/shield/src/: CMakeLists.txt  Cell.h  ConfigSpace.h  FileIO.h  Grid.h  Main.cpp  Map.h  MotionPlanning.h  Point.h
interviews/shield/src/test/: CMakeLists.txt  CellTests.cpp  PointTests.cpp
interviews/starter-c++-cmake/: CMakeLists.txt  build.sh
interviews/starter-c++-cmake/src/: CMakeLists.txt
interviews/starter-c++-cmake/src/test/: CMakeLists.txt
(+327 files in other folders)
